# llm-agent

./: .dockerignore  .gitignore  .gitignore.bk  .mcp.json  .repomix-output.txt  CLAUDE.md  README.md  complete_migration.sql  fix_email_digest_config.sql  fix_foreign_keys.sql  fix_gmail_tools_consistency.sql  mermaid_viewer.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  store_oauth_tokens.sql  supabaseAutoGenTypes.ts  test_agent_loading.py  test_db_agent_loader.py  test_db_connection.py  test_email_digest_integration.py  test_psycopg2_connection.py  test_vault_service_rpc.py
.archive/: .clinerules  session_management_and_executor_caching_plan.md
.claude/: env.sh  settings.json  settings.local.json
chatServer/: Dockerfile  README.md  fly.toml  main.py  main_v2.py  requirements.txt  test_orchestrator.py  test_simple_agent.py
config/: settings.yaml
docs/: chatServer-decomposition-phase3.md  chatServer-decomposition-summary.md  chatServer-services-api.md  deployment-strategy.md
langsmith/: eval-permissions.py
memory-bank/: CLARITY_CONSOLIDATION_COMPLETE.md  CLARITY_CONSOLIDATION_PLAN.md  CLEANUP_COMPLETION_SUMMARY.md  CLEANUP_TEST_PLAN.md  CONSOLIDATION_COMPLETE.md  PHASE3_COMPLETION_SUMMARY.md  README.md  README_PROPOSED.md  SIMPLIFICATION_PLAN.md  active-tasks.md  active-tasks_SAMPLE.md  activeContext.md  architect_test.md  architecture.md  backlog.md  chatGPTConvo.md  cursor_distilling_agent_implementation.md  discussion_summary.md  distilling_errors.md  gmail-tools-gap-closure-plan.md  package.json  (+13 more)
(+845 files in other folders)
